feat: add chat on a solutio
